--- a/css/estiloForm.css
+++ b/css/estiloForm.css
@@ -1,7 +1,7 @@
-@import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@600&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Big Shoulders Display');
 
 body {
-  font-family: 'Orbitron', sans-serif;
+  font-family: 'Big Shoulders Display';
   background-color: #0f0f0f;
   color: #d7ff2a;
   margin: 0;
@@ -45,7 +45,7 @@ body {
 }
 
 h1 {
-  font-size: 1.8rem;
+  font-size: 2;
   margin-bottom: 30px;
   text-align: center;
   color: #d7ff2a;
@@ -56,13 +56,13 @@ h1 {
 }
 
 .question h3 {
-  font-size: 1.2rem;
+  font-size: 1.6rem;
   margin-bottom: 15px;
   color: #ffffff;
 }
 
 label {
-  font-size: 1rem;
+  font-size: 1.4rem;
   display: flex;
   align-items: center;
   gap: 12px;
