--- a/perfis/css/perfis.css
+++ b/perfis/css/perfis.css
@@ -1,7 +1,7 @@
-@import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@600&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Big Shoulders Display');
 
 body {
-  font-family: 'Orbitron', sans-serif;
+  font-family: 'Big Shoulders Display';
   color: #d7ff2a;
   margin: 0;
   padding: 0;
@@ -76,17 +76,21 @@ body.comandante {
 }
 
 h1 {
-  font-size: 1.8rem;
+  font-size: 3rem;
   margin-bottom: 30px;
   text-align: center;
   color: currentColor;
 }
 
 p {
-  font-size: 1rem;
+  font-size: 2rem;
   line-height: 1.5;
   margin-bottom: 20px;
   color: currentColor;
+}
+
+li {
+  font-size: 1.5rem;
 }
 
 .chart-container {
